wal-macros/tests/rsx_macro_tests/elements/element_without_opening_fail.rs
use wal_macros::rsx;

fn main() {
    rsx! { </div> };
    rsx! { </span> };
    rsx! { </> };
    rsx! { <div></span> };
    rsx! { <div><span></div></span></div> };
}
